# pytest-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
pytest_collector/: __init__.py  __main__.py  collector.py
test/: sanity_test.py
test/example_suites/: first_module_test.py  second_module_test.py
test/example_suites/inner_directory/: third_module_test.py
