[tool.poetry]
name = "pytest-collector"
version = "0.1.0"
description = "Python package for collecting pytest."
authors = ["michael tadnir <tadnir50@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tadnir/pytest-collector"
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.6"
pytest = "^7.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"